@@ -121,6 +121,7 @@ BA  96- (f(x, y = 1) = x*y); f'(1) returned 0
     97- quadgen(2^64+1) * 1. => junk (stack corruption in quad_disc).
     98- ellmoddegree: infinite loop and stack corruption (e.g on 52a2)
     99- ellmoddegree(ellinit("10890ba6")) -> wrong result
+   100- nfgcd called ZX_resultant(a,T) with typ(a) == t_INT
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
